--- a/car_park/vehicle/templates/enterprise_list.html
+++ b/car_park/vehicle/templates/enterprise_list.html
@@ -9,6 +9,8 @@
         <tr>
             <th>Название</th>
             <th>Город</th>
+            <th>Таймзона</th>
+            <th>Действия</th>
         </tr>
     </thead>
     <tbody>
@@ -16,10 +18,17 @@
         <tr>
             <td>{{ enterprise.name }}</td>
             <td>{{ enterprise.city }}</td>
+            <td>{{ enterprise.local_timezone }}</td>
+            <td>
+                <!-- Ссылка на редактирование таймзоны -->
+                <a href="{% url 'enterprise-edit' enterprise.id %}" class="btn btn-primary btn-sm">
+                  Изменить таймзону
+                </a>
+            </td>
         </tr>
         {% empty %}
         <tr>
-            <td colspan="2">Нет доступных предприятий.</td>
+            <td colspan="4">Нет доступных предприятий.</td>
         </tr>
         {% endfor %}
     </tbody>
