implemented forms and backend logic for displaying and crud operations for vehicles

--- a/car_park/vehicle/templates/enterprise_list.html
+++ b/car_park/vehicle/templates/enterprise_list.html
@@ -16,7 +16,12 @@
     <tbody>
         {% for enterprise in enterprises %}
         <tr>
-            <td>{{ enterprise.name }}</td>
+            <!-- Название теперь кликабельно -->
+            <td>
+                <a href="{% url 'enterprise-vehicles-list' enterprise.id %}">
+                  {{ enterprise.name }}
+                </a>
+            </td>
             <td>{{ enterprise.city }}</td>
             <td>{{ enterprise.local_timezone }}</td>
             <td>
