--- a/car_park/vehicle/templates/base.html
+++ b/car_park/vehicle/templates/base.html
@@ -8,7 +8,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    {% block head %}{% endblock %}
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/tempus-dominus/6.4.4/css/tempus-dominus.min.css"
+          integrity="sha512-wO+rVZhTyJgwKxVY279cD/TZTlW2m0IJQXzoOHfj2w//md58T3jc8ZWHb+HEm8CspcCNnaJVFPyRAGd/Y4ScfA=="
+          crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+
+    {% block head %}{% endblock head %}
 </head>
 
 <body>
@@ -24,6 +37,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tempus-dominus/6.4.4/js/tempus-dominus.js"
+            integrity="sha512-f7lexY18doLNGU2OQhsDLO7J9KtqtE5b7BC6guXCQsDzoHuqbOOQX+n99dUUOIpXsm9PuXrS1KoThsVWDunKrQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+
+    {% block extra_scripts %}{% endblock extra_scripts %}
 </body>
 
 </html>
