implemented templates for displaying car and route information

--- a/car_park/vehicle/templates/enterprise_vehicles_list.html
+++ b/car_park/vehicle/templates/enterprise_vehicles_list.html
@@ -20,7 +20,12 @@
     <tbody>
     {% for vehicle in vehicles %}
     <tr>
-        <td>{{ vehicle.vin }}</td>
+        <!-- VIN кликабельный -->
+        <td>
+            <a href="{% url 'vehicle-detail' pk=enterprise.id vehicle_id=vehicle.id %}">
+                {{ vehicle.vin }}
+            </a>
+        </td>
         <td>{{ vehicle.price }}</td>
         <td>{{ vehicle.release_year }}</td>
         <td>{{ vehicle.mileage }}</td>
